# contracts

./: .gitignore  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
evm/: TEMPLATE_STANDARD.md
evm/erc-1155/: .env.example  .learn.md  README.md  package-lock.json  package.json
evm/erc-1155/ignition/: ERC1155TokenDeploy.ts
evm/erc-1155/src/: ERC1155Token.sol
evm/erc-1155/test/: ERC1155TokenTest.ts
evm/multisig/: .learn.md  README.md  arguments.js  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
evm/multisig/src/: multisig.sol
evm/multisig/test/: multisigTest.ts
evm/nft-erc721/: .env.example  .gitignore  .learn.md  README.md  hardhat.config.ts  package-lock.json  package.json
evm/nft-erc721/src/: NFT721.sol
evm/nft-erc721/test/: NFT721Test.ts
evm/staking/: .env.example  .learn.md  README.md  hardhat.config.ts  package-lock.json  package.json
evm/staking/src/: Staking.sol
evm/staking/test/: StakingTest.ts
evm/subscription/: .learn.md  README.md  package-lock.json  package.json
evm/token-ERC20/: hardhat.config.ts  package-lock.json  package.json
evm/token-ERC20/src/: ERC20.sol
evm/token-erc20/: .learn.md  hardhat.config.ts  package-lock.json  package.json
solana/staking/: .learn.md  Anchor.toml  README.md  package-lock.json  package.json
solana/staking/programs/staking/: Cargo.toml
solana/staking/programs/staking/src/: error.rs  events.rs  instructions.rs  lib.rs  state.rs
solana/staking/programs/staking/src/instructions/: claim_reward.rs  configure_reward.rs  exit.rs  initialize.rs  stake.rs  withdraw.rs
(+20 files in other folders)
